syntax = "proto2";
package proto;

message VisitorData {
  string id = 1;
  int32 timestamp = 5;
}

message InnertubePayload {
  message Context {
    message Client {
      int32 unkparam = 16;
      string client_version = 17;
      string client_name = 18;
    }
    Client client = 1;
  }
  
  Context context = 1;
  
  optional string target = 2;
  
  message SoundSearchParams {
    string target_id = 2;
    string query = 3;
  }
  
  optional SoundSearchParams sound_search_params = 16;
}

message SoundInfoParams {
  message Sound {
    message Params {
      message Ids {
        string id_1 = 1;
        string id_2 = 2;
        string id_3 = 3;
      }
      Ids ids = 2;
    }
    Params params = 1;
  }
  
  Sound sound = 94;
}

message NotificationPreferences {
  string channel_id = 1;
 
  message Preference {
    int32 index = 1;
  }
  Preference pref_id = 2;
  
  optional int32 number_0 = 3;
  optional int32 number_1 = 4;
}

message LiveMessageParams {
  message Params {
    message Ids {
      string channel_id = 1;
      string video_id = 2;
    }
    Ids ids = 5;
  }
  Params params = 1;
  
  optional int32 number_0 = 2;
  optional int32 number_1 = 3;
}

message GetCommentsSectionParams {
  message Context {
    string video_id = 2;
  }
  Context ctx = 2;
  
  int32 unk_param = 3;
  
  message Params {
    optional string unk_token = 1;
    
    message Options {
      string video_id = 4;
      int32 sort_by = 6;
      int32 type = 15;
    }
    
    message RepliesOptions {
      string comment_id = 2;
    
      message UnkOpts {
        int32 unk_param = 1;
      }
      UnkOpts unkopts = 4;
      
      optional string channel_id = 5;
      string video_id = 6;
      
      int32 unk_param_1 = 8;
      int32 unk_param_2 = 9;
    }
    
    optional Options opts = 4;
    optional RepliesOptions replies_opts = 3;
    
    optional int32 page = 5;
    string target = 8;
  }
  
  Params params = 6;
}

message CreateCommentParams {
  string video_id = 2;
  message Params {
    int32 index = 1;
  }
  Params params = 5;
  int32 number = 10;
}

message CreateCommentReplyParams {
  string video_id = 2;
  string comment_id = 4;
 
  message UnknownParams {
    int32 unk_num = 1;
  }
  UnknownParams params = 5;
  
  optional int32 unk_num = 10;
}

message PeformCommentActionParams {
  int32 type = 1;
  string comment_id = 3;
  string video_id = 5;
  
  optional int32 unk_num = 2;
  optional string channel_id = 23;
  
  message TranslateCommentParams {
    message Params {
      message Comment {
        string text = 1;
      }
      Comment comment = 1;
    }
    Params params = 3;
    
    string comment_id = 2;
    string target_language = 4;
  }
  
  optional TranslateCommentParams translate_comment_params = 31;
}

message SearchFilter {
  int32 number = 1;
  message Filter {
    int32 param_0 = 1;
    int32 param_1 = 2;
    int32 param_2 = 3;
  }
  Filter filter = 2;
}